--- a/client/app/views/organisations/_form.html.haml
+++ b/client/app/views/organisations/_form.html.haml
@@ -3,10 +3,20 @@
     =form.input :member, :as => :select if organisation.new_record? && admin_logged_in?
     =form.input :name
     =form.input :description
-    -form.semantic_fields_for(:location) do |location_form|
-      =location_form.input :address1
-      =location_form.input :address2
-      =location_form.input :city
-      =location_form.input :postcode
     =form.input :image, :as => :image
+  -form.semantic_fields_for(:location) do |location_form|
+    -location_form.inputs :class => "organisation_address_fields" do
+      %li
+        %label Address of organisation
+      =location_form.input :address1, :label => false, :input_html => {:class => "labelify", :title => "Address 1"}
+      =location_form.input :address2, :label => false, :input_html => {:class => "labelify", :title => "Address 2"}
+      =location_form.input :city, :label => false, :input_html => {:class => "labelify", :title => "City"}
+      =location_form.input :postcode, :label => false, :input_html => {:class => "labelify", :title => "Postcode"}
+  -form.inputs do
+    =form.input :group, :label => "Which groups?", :as => :select, :collection => ["Group 1", "Group 2", "Group 3"], :include_blank => false, :wrapper_html => {:class => "inline-fields"}
+    =form.input :group_specific_needs, :label => "Groups with specific needs:"
+    =form.input :num_weeks_notice, :label => "How much notice do you need?", :as => :select, :collection => [["1 week", 1], ["2 weeks", 2]], :include_blank => false, :wrapper_html => {:class => "inline-fields"}
+    =form.input :volunteers_insured, :label => "Are volunteers covered under your insurance?"
+    =form.input :require_crb, :label => "Do you require CRB checks?"
+    =form.input :terms, :label => "What are your terms and conditions?", :input_html => {:rows => 5}
   =form.buttons
