--- a/client/app/views/members/agree_to_big_print.html.haml
+++ b/client/app/views/members/agree_to_big_print.html.haml
@@ -1,6 +1,6 @@
 -title "Welcome to Spots of Time"
 
 %p
-  ="You are now signed up with the organisation #{link_to_self(@member.organisations.first.name)}."
-%p="Your organisation will appear to the public once it has been approved. In the mean time, you can #{link_to('manage your activities', organisation_time_slots_path(@member.organisations.first))}."
+  ="You are now signed up with the organisation #{link_to_self(@member.organisations.first.name)}. Your organisation will appear to the public once it has been approved."
+%p="In the mean time, you can #{link_to('manage your activities', organisation_time_slots_path(@member.organisations.first))} or #{link_to('build your profile', @member.organisations.first)}."
   
