--- a/client/app/views/activities/show.html.haml
+++ b/client/app/views/activities/show.html.haml
@@ -13,27 +13,23 @@
       %br.clear
       %br.clear
     =read_more_truncate(@activity.description, :length => 1200)
--if @organisation
-  .row
-    .threecol
-    .ninecol.last
-      %hr
-      %h4 When can you help out?
-      =render("time_slots/table", :time_slots => activity.time_slots.organisation_id_is(organisation.id).ascend_by_starts_at)
-  -unless @other_activities.blank?
-    .row
-      .threecol
-      .ninecol.last
+    -if @organisation
+      .subrow
         %hr
-        %h4 Other things you can do here
+        %h4 When can you help out?
+        =render("time_slots/table", :time_slots => @activity.time_slots.organisation_id_is(@organisation.id).ascend_by_starts_at)
+    -if !@other_activities.blank?
+      .subrow
+        %hr
+        %h4="#{@activity.activity_type=='anytime' ? "Other things you can do anytime anywhere" : "Other things you can do here"}"
         .activity_grid.small_activity_grid
           -@other_activities.each do |activity|
-            -link_to(organisation_activity_path(@organisation,activity), :class => "activity") do
+            -link_to(@organisation ? organisation_activity_path(@organisation, activity) : activity, :class => "activity") do
               =image_for(activity, "147x147#")
               .label=activity
--else
+-if @organisation.nil? && @activity.activity_type=="volunteering"
   #activity_search_row.row
-    .fourcol.last
+    .fivecol.last
       %h4 Find somewhere to do this activity
       =text_field_tag :postcode, params[:postcode], :class => "labelify fl", :title => "e.g. SW1 2BJ"
       =link_to_function("Go", "ActivityMap.findPostCode()", :class => "bttn_l")
@@ -48,4 +44,5 @@
         No results here
         
 .row
-  =options_panel(@activity)
+  .twelvecol
+    =options_panel(@activity)
