--- a/client/app/views/home/index.html.haml
+++ b/client/app/views/home/index.html.haml
@@ -14,10 +14,17 @@
 -no_content_row
 -hidden_title "Spots of Time"
 .row
+  .twelvecol.last
+    -if !Activity.anytime.empty?
+      #activity_filter
+        %span Filter by
+        =link_to_function("All", "ActivityFilter.filter('all')", :id => "activity_filter_all", :class => "active")
+        =link_to_function("Volunteering", "ActivityFilter.filter('volunteering')", :id => "activity_filter_volunteering")
+        =link_to_function("Anytime anywhere", "ActivityFilter.filter('anytime')", :id => "activity_filter_anytime")
   .twelvecol
     .activity_grid
       -Activity.all.each do |activity|
-        -link_to(activity, :class => "activity") do
+        -link_to(activity, :class => "activity type_#{activity.activity_type}") do
           =image_for(activity, "124x124#")
           .label=activity
 .row
