Changed searching on activity map.

--- a/client/app/views/activities/_organisation_panel.html.haml
+++ b/client/app/views/activities/_organisation_panel.html.haml
@@ -1,5 +1,12 @@
-%h2=organisation.name
-=read_more_truncate(organisation.description) 
+-lat ||= nil
+-lng ||= nil
+.organisation_title
+  %h2=organisation.name
+  -if !lat.blank? && !lat.blank?
+    %span.miles_away
+      ="#{pluralize(organisation.location.distance_to(Location.new(:lat => lat, :lng => lng)).to_i, "mile")} away"
+.flcb
+  =read_more_truncate(organisation.description) 
 %hr
 %h4 When can you help out?          
 =render("time_slots/table", :time_slots => activity.time_slots.organisation_id_is(organisation.id).ascend_by_starts_at)
