--- a/client/app/views/organisations/signup.html.haml
+++ b/client/app/views/organisations/signup.html.haml
@@ -21,7 +21,7 @@
         =form.input :group_specific_needs, :label => "Groups with specific needs:"
         =form.input :num_weeks_notice, :label => "How much notice do you need?", :as => :select, :collection => [["1 week", 1], ["2 weeks", 2]], :include_blank => false, :wrapper_html => {:class => "inline-fields"}
         =form.input :volunteers_insured, :label => "Are volunteers covered under your insurance?"
-        =form.input :require_crb, :label => "Do you require CRB checks?"
+        =#form.input :require_crb, :label => "Do you require CRB checks?"
         =form.input :terms, :label => "What are your terms and conditions?", :input_html => {:rows => 5}
       -form.semantic_fields_for(:member) do |member_form|
         -member_form.inputs :class => "organisation_member_fields" do
