--- a/client/app/views/layouts/application.html.haml
+++ b/client/app/views/layouts/application.html.haml
@@ -17,6 +17,7 @@
     = google_javascripts :jquery, :jqueryui
     = javascript_include_tag 'jrails', 'jquery.cycle', 'tramlines', 'client/tramlines', 'jquery.labelify', 'jquery.fancy_box/jquery.fancybox-1.3.1.pack', 'jquery.fancy_box/jquery.mousewheel-3.0.2.pack.js', "jquery.autogrowtextarea.js", "css3-mediaqueries", :cache => true
     =javascript_include_tag 'jquery.fancy_box/jquery.easing-1.3.pack.js'
+    =javascript_include_tag "http://connect.facebook.net/en_US/all.js"
     =# stylesheet_link_tag 'http://fast.fonts.com/cssapi/f1269106-f262-440b-b3ce-93423b2eaf06.css'
     = stylesheet_link_tag 'jquery.fancybox', 'jquery-ui', 'client/1140.css', 'client/styles.css', 'client/mobile.css', :cache => false
     /[if IE]
@@ -36,6 +37,12 @@
         });
         $("a#login_link").fancybox({
         		'hideOnContentClick': false
+        });
+        FB.init({
+         appId  : '#{Facebooker2.app_id}',
+         status : true, // check login status
+         cookie : true, // enable cookies to allow the server to access the session
+         xfbml  : true  // parse XFBML
         });
       });
 
@@ -74,4 +81,4 @@
                 %h1#page_title=page_title
           =content_for_layout
       =render :partial => 'layouts/footer'
-    %div{:id => "fb-root"}        
+    %div{:id => "fb-root"}
