--- a/client/app/views/time_slots/index.html.haml
+++ b/client/app/views/time_slots/index.html.haml
@@ -28,6 +28,10 @@
       =link_to_function("Add a new time slot", "$(this).next().show();$(this).hide()",:class => "new_time_slot_link")
       .new_time_slot_form{:style => "display:none"}
         =render("time_slots/form", :time_slot => activity.time_slots.build(:organisation => @organisation), :disabled => false)
+-if params[:signup] #just signed up
+  #signup_next_link_row.row
+    .twelvecol
+      =link_to("Next", @organisation, :class => "bttn_l")
 .row
   .twelvecol
     =options_panel
