--- a/client/app/views/members/big_print.html.haml
+++ b/client/app/views/members/big_print.html.haml
@@ -1,10 +1,26 @@
--title "Here’s the Really Big Print"
+-title "The Really Big Print"
 
-%p 
-  Sed molestie augue sit amet leo consequat posuere. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Proin vel ante a orci tempus eleifend ut et magna. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus luctus urna sed urna ultricies ac tempor dui sagittis. In condimentum facilisis porta. Sed.
+%p
+  So before you get started with Spots of Time there are just few things we need to check you’re ok with (the serious stuff).
+%p
+  %strong Our Fees - 
+  We wish we could make it free we need to pay our bills.  Our rates are currently £120 a year and we will send you an invoice for this through the post.  We are ‘not for profit’ so all money goes into making the service better.
+%p
+  %strong CRB Checks - 
+  We don’t CRB check our volunteers:  we’ve checked the law and if placements are one-off or irregular and carried out in a supervised environment, then CRB checks aren’t required – in fact its illegal to require one.  But it does mean that we need you to make sure that staff are present when placements are going on.  We’ll also monitor volunteers to make sure that if someone becomes regular with you, that we ensure they are CRB checked.
+%p
+  %strong Insurance - 
+  We ask that you hold public liability insurance – legally our volunteers are defined as members of the public so will be covered by this.   We also hold extra cover just in case.
+%p
+  %strong Data Protection - 
+  We will hold the details of all our volunteers on our contact management database – these will remain confidential under the Data Protection Act unless volunteers give permission for them to be shared.  
+%p
+  %strong And most important of all - 
+  We ask that you take the time to welcome all volunteers, to introduce them to people they’ll be working with and to thank them when they leave.  It can be nerve wracking for people to come into a new environment so it makes all the difference to make them feel at home & makes it more likely they’ll come back.
+%p
+  Once we’ve approved your signup you can use the profile page we’ve created for you to encourage people from your community to get involved, you can edit your activities and keep track of who’s volunteering with you. Enjoy!
   
-  Curabitur vulputate, ligula lacinia scelerisque tempor, lacus lacus ornare ante, ac egestas est urna sit amet arcu. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Sed molestie augue sit amet leo consequat posuere. Vestibulum ante ipsum primis in faucibus orci luctus.
-  
+%br
 -semantic_form_for(@member, :url => agree_to_big_print_member_path(@member)) do |form|
   -form.inputs do
     =form.input :agreed_to_terms, :label => "I agree to the terms and conditions"
