--- a/client/app/views/organisations/_form.html.haml
+++ b/client/app/views/organisations/_form.html.haml
@@ -1,13 +1,11 @@
 -semantic_form_for(organisation, :html => {:multipart => true}) do |form|
   -form.inputs do
     =form.input :member, :as => :select if organisation.new_record? && admin_logged_in?
-    =form.input :name
-    =form.input :description, :input_html => {:rows => 3}
-    =form.input :image, :as => :image
+    =form.input :name, :label => "Name of your organisation or project"
   -form.semantic_fields_for(:location) do |location_form|
     -location_form.inputs :class => "organisation_address_fields" do
       %li
-        %label Address of organisation
+        %label Address
       =location_form.input :address1, :label => false, :input_html => {:class => "labelify", :title => "Address 1"}
       =location_form.input :address2, :label => false, :input_html => {:class => "labelify", :title => "Address 2"}
       =location_form.input :city, :label => false, :input_html => {:class => "labelify", :title => "City"}
@@ -19,11 +17,19 @@
       You can drag the marker below to specify the location of your organisation.
     =google_map(organisation, :marker_options => {:draggable => true, :dragend => "function() {OrganisationForm.saveLatLng('#{organisation.id}');}"})
   -form.inputs do
-    =form.input :group, :label => "Which groups?", :as => :select, :collection => ["Group 1", "Group 2", "Group 3"], :include_blank => false, :wrapper_html => {:class => "inline-fields"}
-    =form.input :group_specific_needs, :label => "Groups with specific needs:"
-    =form.input :num_weeks_notice, :label => "How much notice do you need?", :as => :select, :collection => [["1 week", 1], ["2 weeks", 2]], :include_blank => false, :wrapper_html => {:class => "inline-fields"}
-    =form.input :volunteers_insured, :label => "Are volunteers covered under your insurance?"
+    %li.organisation_label_wrapper
+      =form.label :description, "Description for your profile page"
+      %p Who you are, what you do and anything else you want volunteers to know about you? If you're hard to find include directions! Do include information on the people you work with, especially if they have specific needs that require special care and consideration from volunteers.
+    =form.input :description, :label => false, :input_html => {:rows => 8}      
+    %li.organisation_label_wrapper.organisation_image_label_wrapper
+      =form.label :image, "Profile picture"
+      %p Please add a picture for your profile page – this could be a logo or a photo of the people you work with, whatever you prefer.
+    =form.input :image, :as => :image, :label => false
+    =form.input :group_type, :label => "Who does your organisation support?", :as => :select, :collection => Organisation::GROUP_TYPES, :include_blank => false, :wrapper_html => {:class => "inline-fields"}
+    =form.input :size_of_organisation, :as => :select, :collection => Organisation::SIZE_OPTIONS, :include_blank => false, :wrapper_html => {:class => "inline-fields"}  
+    =#form.input :num_weeks_notice, :label => "How much notice do you need?", :as => :select, :collection => [["1 week", 1], ["2 weeks", 2]], :include_blank => false, :wrapper_html => {:class => "inline-fields"}
+    =#form.input :volunteers_insured, :label => "Are volunteers covered under your insurance?"
     =#form.input :require_crb, :label => "Do you require CRB checks?"
-    =form.input :terms, :label => "What are your terms and conditions?", :input_html => {:rows => 5}
+    =#form.input :terms, :label => "What are your terms and conditions?", :input_html => {:rows => 5}
   -form.buttons do
-    =form.commit_button "Submit"
+    =form.commit_button "Save"
